# injestao_dados_arquitetura_medalhao

./: .gitignore  README.md  pyproject.toml
scripts/: bronze_produtos.py  gold_produtos.py  silver_produtos.py
